--- a/SignalR.Ninject/packages.config
+++ b/SignalR.Ninject/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="4.0.7" />
+  <package id="Newtonsoft.Json" version="4.5.3" />
   <package id="Ninject" version="2.2.1.4" />
-  <package id="SignalR.Server" version="0.4.0.0" />
+  <package id="SignalR.Server" version="0.5.31-pre" />
 </packages>
